2003-06-09  John Levon  <levon@movementarian.org>

	* pp/Makefile.am:
	* libutil/Makefile.am: fix make distcheck

2003-06-09  John Levon  <levon@movementarian.org>

	* libpp/opp_symbol.h: rename to ...

	* libpp/symbol.h: ... this

	* libpp/Makefile.am:
	* libpp/format_output.h:
	* libpp/format_output.cpp:
	* libpp/profile_container.h:
	* libpp/profile_container.cpp:
	* libpp/sample_container.h:
	* libpp/sample_container.cpp:
	* libpp/symbol_functors.h:
	* libpp/symbol_sort.cpp: fix up from above and some header
	cleanups

2003-06-09  John Levon  <levon@movementarian.org>

	* libpp/profile.h: std::pair not pair

2003-06-08  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile.cpp: don't underflow start offset when the vma range
	  is unknown
	* pp/opreport.cpp: use samples_range() not samples_range(0, ~0)

2003-06-08  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile.h:
	* libpp/profile.cpp: replace accumulate_samples() API by an iterator
	  interface
	* libpp/profile_container.h:
	* libpp/profilecontainer.cpp:
	* pp/opreport.cpp: use new API

2003-06-08  Philippe Elie  <phil.el@wanadoo.fr>

	* include/sstream: replace old version by the once shipped with
	  2.95.3, seekg() in the old was not working

2003-06-08  John Levon  <levon@movementarian.org>

	* libpp/name_storage.h: don't need to define the tag structs

	* libutil++/unique_storage.h: fix the comments,
	make get() public

2003-06-08  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile_container.cpp:
	* libutil++/string_manip.cpp: gcc 2.91.66 fix

2003-06-08  John Levon  <levon@movementarian.org>

	* libpp/name_storage.h:
	* libpp/name_storage.cpp:
	* libpp/opp_symbol.h:
	* libpp/profile_container.cpp:
	* libpp/symbol_functors.cpp:
	* libutil++/unique_storage.h: don't derive from I()
	at all for id_value, it's not needed. Hide .id and
	provide operator<(), operator==(), operator!=(), and
	set()

2003-06-08  John Levon  <levon@movementarian.org>

	* libutil++/unique_storage.h: make some of